fixed some styling to have all sections wrapped in same row using flex-wrap

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,12 @@ body {
 
 }
 
+main {
+  display: flex;
+  // justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 // .players-section{
 //   border: 4px solid yellow;
 // }
@@ -89,6 +95,13 @@ body {
 .players img{
   width: 100%;
   height: auto;
+}
+
+
+.wrapper{
+  display: block;
+  height: 800px;
+  width: 725px;
 }
 
 ul {
